--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="pl">
 
   <head>
@@ -11,6 +12,7 @@
   </head>
   <body>
   Open Ski Jumping
-  Ski Jumping Game
 
   </body>
+
+</html>
